# Xihe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_en.md
shaders/: base.frag  (+5 more)
xihe/: CMakeLists.txt  gpu_scene.cpp  gpu_scene.h  gui.cpp  gui.h  main.cpp  mesh_shading_app.cpp  mesh_shading_app.h  preprocess_app.cpp  preprocess_app.h  sample_app.cpp  sample_app.h  temp_app.cpp  temp_app.h  test_app.cpp  test_app.h  virtual_texture.cpp  virtual_texture.h  xihe.cpp  xihe.h  xihe_app.cpp  xihe_app.h
xihe/backend/: allocated.cpp  allocated.h  buffer.cpp  buffer.h  buffer_pool.cpp  buffer_pool.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  debug.cpp  debug.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  fence_pool.cpp  fence_pool.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  query_pool.cpp  query_pool.h  queue.cpp  queue.h  (+15 more)
xihe/backend/resources_management/: resource_binding_state.cpp  resource_binding_state.h  resource_cache.cpp  resource_cache.h  resource_caching.h  resource_record.cpp  resource_record.h
xihe/backend/shader_compiler/: glsl_compiler.cpp  glsl_compiler.h  spirv_reflection.cpp  spirv_reflection.h
xihe/common/: error.cpp  error.h  glm_common.h  helpers.h  logging.h  strings.cpp  strings.h  timer.cpp  timer.h  vk_common.cpp  vk_common.h
xihe/platform/: application.cpp  application.h  filesystem.cpp  filesystem.h  glfw_window.cpp  glfw_window.h  input_events.cpp  input_events.h  platform.cpp  platform.h  window.cpp  window.h
xihe/rendering/: mesh_shading.cpp  mesh_shading.h  pipeline_state.cpp  pipeline_state.h  post_processing.cpp  post_processing.h  rdg.cpp  rdg.h  rdg_builder.cpp  rdg_builder.h  rdg_pass.cpp  rdg_pass.h  render_context.cpp  render_context.h  render_frame.cpp  render_frame.h  render_pipeline.cpp  render_pipeline.h  render_target.cpp  render_target.h  subpass.cpp  subpass.h
xihe/scene_graph/: asset_loader.cpp  asset_loader.h  component.cpp  component.h  geometry_data.h  gltf_loader.cpp  gltf_loader.h  gpu_scene.cpp  gpu_scene.h  node.cpp  node.h  scene.cpp  scene.h  script.cpp  script.h
xihe/stats/: frame_time_provider.h  stats.cpp  stats.h  stats_common.h  stats_provider.cpp  stats_provider.h  vulkan_stats_provider.cpp  vulkan_stats_provider.h
(+157 files in other folders)
